[gd_scene load_steps=3 format=3 uid="uid://f0tj3vq8x8bb"]

[ext_resource type="Texture2D" uid="uid://b5xdvblb2r3wh" path="res://asset/attr/hp_recovery.png" id="1_mfx0x"]
[ext_resource type="Script" path="res://GUI/attr_panel.gd" id="1_xlp0w"]

[node name="AttrPanel" type="Panel"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -140.0
offset_right = -3.0
offset_bottom = 140.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_xlp0w")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 24.5
offset_bottom = 15.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
text = "K_ATTR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttrList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="AttrTemplate" type="HBoxContainer" parent="AttrList"]
visible = false
layout_mode = 2

[node name="AttrImg" type="TextureRect" parent="AttrList/AttrTemplate"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_mfx0x")
expand_mode = 2

[node name="Panel" type="Panel" parent="AttrList/AttrTemplate/AttrImg"]
visible = false
layout_mode = 0
offset_left = -131.0
offset_top = -14.0
offset_right = -3.0
offset_bottom = 34.0
mouse_filter = 2

[node name="Img" type="TextureRect" parent="AttrList/AttrTemplate/AttrImg/Panel"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0
texture = ExtResource("1_mfx0x")
expand_mode = 2

[node name="Name" type="Label" parent="AttrList/AttrTemplate/AttrImg/Panel"]
layout_mode = 0
offset_left = 48.0
offset_right = 128.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc" type="Label" parent="AttrList/AttrTemplate/AttrImg/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 6
vertical_alignment = 1
autowrap_mode = 2

[node name="AttrName" type="Label" parent="AttrList/AttrTemplate"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 6
text = "K_LV"
vertical_alignment = 1

[node name="AttrValue" type="Label" parent="AttrList/AttrTemplate"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "3"
horizontal_alignment = 2
vertical_alignment = 1
